option('udev-dir',
       type: 'string',
       default: '',
       description: 'udev base directory [default=$prefix/lib/udev]')

option('enable-tests',
	type: 'boolean',
	value: true,
	description: 'Build the tests (default=yes)')

option('enable-documentation',
	type: 'boolean',
	value: true,
	description: 'Build the documentation (default=yes)')

option('systemd-unit-dir',
	type : 'string',
	default : '',
	description : 'systemd unit directory [default=$libdir/systemd/system]')

option('dbus-root-dir',
	type : 'string',
	default : '',
	description : 'dbus service directory [default=$datadir/dbus-1]')
